--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ body{
 
 .logo-img {
     width: 50px;
-    height: auto;
-    margin-right: 10px;
+    display: flex;
+    border-radius: 30px;
 }
 
 .header{
@@ -36,6 +36,7 @@ body{
     top: 0;
     left: 0;
     right: 0;
+    padding-left: 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -46,6 +47,7 @@ body{
 .logo{
     color: #303030;
     font-weight: 800;
+    max-width: 100%;
 }
 
 .menu .navbar ul li{
@@ -322,6 +324,7 @@ text-align: center;
     .bg{
         top:30px;
     }
+    
 }
 
 @media(max-width: 713px){
@@ -365,8 +368,9 @@ text-align: center;
     .logo{
         font-size: 50px;
         color: #ffffff;
-        padding-top: 50px;
+        padding-top: 70px;
         padding-left: 30px;
+        margin-bottom: 0px;
     }
 
     .menu .navbar ul li{
@@ -391,9 +395,10 @@ text-align: center;
     }
 
     #somos{
-        font-size: 60px;
-        padding-top: 120px;
+        font-size: 35px;
+        padding-top: 220px;
         transition: all 0.4;
+        font-size: 800;
     }
 
     #somos1{
@@ -489,7 +494,7 @@ text-align: center;
     }
 
     .mision{
-        padding-top: 600px;
+        padding-top: 650px;
     }
     
     .bg{
